[gd_scene load_steps=25 format=3 uid="uid://dxgfmstmkxcg"]

[ext_resource type="Texture2D" uid="uid://blwh3wywo1owd" path="res://Sprites/Foxy.png" id="1_reje0"]
[ext_resource type="PackedScene" uid="uid://d1ce8760jml2r" path="res://scene/bullet.tscn" id="2_8612m"]
[ext_resource type="Script" path="res://scene/player.gd" id="2_p3ca5"]
[ext_resource type="AudioStream" uid="uid://ckm54wr250vi0" path="res://Audio/Gun.mp3" id="4_8ukk0"]
[ext_resource type="AudioStream" uid="uid://b4ee7kq67tgvv" path="res://Audio/Running.mp3" id="5_dbclj"]
[ext_resource type="AudioStream" uid="uid://eab11jfwa8qb" path="res://Audio/GameOver.mp3" id="6_40rcf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5umcr"]
atlas = ExtResource("1_reje0")
region = Rect2(0, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlfd1"]
atlas = ExtResource("1_reje0")
region = Rect2(33, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bn2p"]
atlas = ExtResource("1_reje0")
region = Rect2(66, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hmhr"]
atlas = ExtResource("1_reje0")
region = Rect2(99, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x23e7"]
atlas = ExtResource("1_reje0")
region = Rect2(132, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngras"]
atlas = ExtResource("1_reje0")
region = Rect2(165, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmv0t"]
atlas = ExtResource("1_reje0")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cl4l"]
atlas = ExtResource("1_reje0")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfh7"]
atlas = ExtResource("1_reje0")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgk6x"]
atlas = ExtResource("1_reje0")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5w4n"]
atlas = ExtResource("1_reje0")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33q30"]
atlas = ExtResource("1_reje0")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_taw33"]
atlas = ExtResource("1_reje0")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdvna"]
atlas = ExtResource("1_reje0")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6oue"]
atlas = ExtResource("1_reje0")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt7ah"]
atlas = ExtResource("1_reje0")
region = Rect2(165, 32, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_aqr0d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5umcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlfd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bn2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hmhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x23e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngras")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmv0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cl4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgk6x")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5w4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33q30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taw33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdvna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6oue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt7ah")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlhnj"]
size = Vector2(58, 66)

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("fox")]
script = ExtResource("2_p3ca5")
move_speed = 500.0
fox = NodePath("fox")
bullet_scence = ExtResource("2_8612m")

[node name="fox" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_aqr0d")
animation = &"idle"
autoplay = "die"
frame_progress = 0.470447

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 15)
shape = SubResource("RectangleShape2D_rlhnj")

[node name="FireTimer" type="Timer" parent="."]
autostart = true

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="fireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8ukk0")
volume_db = -11.464

[node name="runSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_dbclj")
volume_db = -11.464

[node name="gameoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_40rcf")
volume_db = -11.464

[connection signal="timeout" from="FireTimer" to="." method="_on_fire"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart"]
